2011-08-19  Yukihiro Nakadaira

	* win_iconv.c: Fixed a bug that assumption that
	sizeof(DWORD)==sizeof(void*) in find_imported_module_by_funcname.
	(Issue 7) (Thanks to j.g.rennison)

2011-08-13  Yukihiro Nakadaira

	* win_iconv.c, win_iconv_test.c: Fixed a bug that //translit
	flag does not work when transliterating to the default
	character.
	(Issue 9) (Thanks to j.g.rennison)

2011-07-26  Yukihiro Nakadaira

	* CMakeLists.txt: fix dll name with mingw.
	(Issue 6) (Thanks to kalevlember)


2011-05-19  Yukihiro Nakadaira

	* win_iconv.c: Add some more UCS aliases.
	Merge from Tor Lillqvist version.
	(Issue 4) (Thanks to mkbosmans)

2011-05-15  Yukihiro Nakadaira

	* Makefile: use variable for tools in Makefile
	(Issue 3) (Thanks to mkbosmans)

2011-01-13  Yukihiro Nakadaira

	* win_iconv_test.c: Removed unused variable.

	* win_iconv_test.c: Added USE_ICONV_H flag to compile with -liconv.
	(Issue 2) (Thanks to amorilia.gamebox)

2010-04-14  Patrick von Reth

	* added c++ support

2010-03-28  Patrick Spendrin

    * CMakeLists.txt, win_iconv.c: add CMake buildsystem, fix bug from issue tracker

2009-07-25  Yukihiro Nakadaira

	* win_iconv.c, readme.txt: doc fix

2009-07-06  Yukihiro Nakadaira

	* win_iconv.c, Makefile, readme.txt: doc fix

2009-06-19  Yukihiro Nakadaira

	* win_iconv.c: cosmetic change
	* win_iconv.c: Change Unicode BOM behavior
	1. Remove the BOM when "fromcode" is utf-16 or utf-32.
	2. Add the BOM when "tocode" is utf-16 or utf-32.

2009-06-18  Yukihiro Nakadaira

	* win_iconv.c: Fixed a bug that invalid input may cause an
	endless loop

2009-06-18  Yukihiro Nakadaira

	* win_iconv.c: Fixed a bug that libiconv_iconv_open() doesn't
	work (Christophe Benoit)

2008-04-01  Yukihiro Nakadaira

	* win_iconv.c: Added //TRANSLIT option.
	http://bugzilla.gnome.org/show_bug.cgi?id=524314

2008-03-20  Yukihiro Nakadaira

	* win_iconv.c: The dwFlags parameter to MultiByteToWideChars()
	must be zero for some code pages (Tor Lillqvist)
